# Chithra

./: .clangd  .gitignore  CMakeLists.txt  README.md
core/canvas/: Canvas.cpp  Canvas.hpp
core/commands/: AddLayerCommand.cpp  AddLayerCommand.hpp  Command.hpp  CropCommand.cpp  CropCommand.hpp  DeleteLayerCommand.cpp  DeleteLayerCommand.hpp  DrawCommand.cpp  DrawCommand.hpp  DuplicateLayerCommand.cpp  DuplicateLayerCommand.hpp  MoveLayerCommand.cpp  MoveLayerCommand.hpp  MoveSelectionCommand.cpp  MoveSelectionCommand.hpp  RenameLayerCommand.cpp  RenameLayerCommand.hpp
core/document/: Document.cpp  Document.hpp  Layer.cpp  Layer.hpp
core/file/: FileManager.cpp  FileManager.hpp  ImageIO.cpp  ImageIO.hpp  ImageLoader.cpp  ImageLoader.hpp
core/graphics/: Color.hpp
core/history/: HistoryManager.cpp  HistoryManager.hpp
core/image/: Image.cpp  Image.hpp
core/managers/: LayerManager.cpp  LayerManager.hpp
core/project/: ProjectSerializer.cpp  ProjectSerializer.hpp
core/render/: DrawSystem.cpp  DrawSystem.hpp
core/selection/: Selection.hpp
core/tools/: BrushTool.cpp  BrushTool.hpp  CropTool.cpp  CropTool.hpp  EraserTool.cpp  EraserTool.hpp  FillTool.cpp  FillTool.hpp  MoveTool.cpp  MoveTool.hpp  SelectionTool.cpp  SelectionTool.hpp  ShapeTool.cpp  ShapeTool.hpp  Tool.hpp  ToolContext.hpp  ToolManager.cpp  ToolManager.hpp
tests/core/: main.cpp
ui/: CanvasWidget.cpp  CanvasWidget.hpp  LayerItemWidget.cpp  LayerItemWidget.hpp  MainWindow.cpp  MainWindow.hpp  Paneldock.cpp  Paneldock.hpp  main.cpp
ui/resources/: icons.qrc
